--- a/Labs/1_Minimal_Basic/build-Minimal_Basic-Desktop_Qt_5_9_9_MinGW_32bit-Debug/Makefile
+++ b/Labs/1_Minimal_Basic/build-Minimal_Basic-Desktop_Qt_5_9_9_MinGW_32bit-Debug/Makefile
@@ -192,6 +192,7 @@ Makefile: ../Minimal_Basic/Minimal_Basic.pro D:/Qt/5.9.9/mingw53_32/mkspecs/win3
 		D:/Qt/5.9.9/mingw53_32/mkspecs/features/qt_config.prf \
 		D:/Qt/5.9.9/mingw53_32/mkspecs/win32-g++/qmake.conf \
 		D:/Qt/5.9.9/mingw53_32/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		D:/Qt/5.9.9/mingw53_32/mkspecs/features/exclusive_builds.prf \
 		D:/Qt/5.9.9/mingw53_32/mkspecs/features/toolchain.prf \
 		D:/Qt/5.9.9/mingw53_32/mkspecs/features/default_pre.prf \
@@ -351,6 +352,7 @@ D:/Qt/5.9.9/mingw53_32/mkspecs/features/qt_functions.prf:
 D:/Qt/5.9.9/mingw53_32/mkspecs/features/qt_config.prf:
 D:/Qt/5.9.9/mingw53_32/mkspecs/win32-g++/qmake.conf:
 D:/Qt/5.9.9/mingw53_32/mkspecs/features/spec_post.prf:
+.qmake.stash:
 D:/Qt/5.9.9/mingw53_32/mkspecs/features/exclusive_builds.prf:
 D:/Qt/5.9.9/mingw53_32/mkspecs/features/toolchain.prf:
 D:/Qt/5.9.9/mingw53_32/mkspecs/features/default_pre.prf:
