pass correctness and persistence

--- a/Labs/3_LSM_Tree/Makefile
+++ b/Labs/3_LSM_Tree/Makefile
@@ -2,11 +2,13 @@
 LINK.o = $(LINK.cc)
 CXXFLAGS = -std=c++14 -Wall
 
-all: correctness persistence
+all: correctness persistence main
 
 correctness: kvstore.o correctness.o SSTable.o SSTable_handler.o MemTable.o
 
 persistence: kvstore.o persistence.o SSTable.o SSTable_handler.o MemTable.o
+
+main: kvstore.o main.o SSTable.o SSTable_handler.o MemTable.o
 
 clean:
 	-rm -f correctness persistence *.o
